force-app/main/default/objects/Health_Insurance_Claim__c/Health_Insurance_Claim__c.object-meta.xml
<CustomObject>
    <description>Health Insurance Claims</description>
    <label>Health Insurance Claim</label>
    <nameField>
        <displayFormat>HIC-{00000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Insurance Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>