force-app/main/default/objects/Health_Insurance_Claim__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnosis</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Health Insurance Claims</relationshipLabel>
    <relationshipName>Health_Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>