force-app/main/default/objects/Health_Insurance_Claim__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Insurance Claims</relationshipLabel>
    <relationshipName>Health_Insurance_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>