force-app/main/default/objects/Health_Insurance_Claim__c/fields/Pend_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pend_Reason__c</fullName>
    <label>Pend Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>