force-app/main/default/objects/Health_Insurance_Claim__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Health Insurance Claims (Procedure)</relationshipLabel>
    <relationshipName>Health_Insurance_Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>