force-app/main/default/objects/Health_Insurance_Claim__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Insurance Claims (Provider)</relationshipLabel>
    <relationshipName>Health_Insurance_Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>