force-app/main/default/objects/Health_Insurance_Claim__c/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Provider__c</columns>
    <columns>Date_of_Service__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>Procedure__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Pend_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>